added the plants section

--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
                     <h5 class="plant-price"> 20 USA</h5>
                     <button class="btn-primary">ADD TO CART</button>
                 </div>
-                <div class="plant-card">
+                <div class="plant-card mobile">
                     <img src="assets/sample-flower-image.png" alt="">
                     <h5 class="plant-name">Lily blosom</h5>
                     <h5 class="plant-price"> 20 USA</h5>
                     <button class="btn-primary">ADD TO CART</button>
                 </div>
-                <div class="plant-card">
+                <div class="plant-card mobile">
                     <img src="assets/sample-flower-image.png" alt="">
                     <h5 class="plant-name">Lily blosom</h5>
                     <h5 class="plant-price"> 20 USA</h5>
