added the responsive section for the plants

--- a/index.html
+++ b/index.html
@@ -41,16 +41,16 @@
 
 
       <main>
-        <section class="plant">
-            <div class="plant-title-section">
+        <section class="plant b">
+            <div class="plant-title-section b">
                 <h3 class="plant-header noto-serif-font font-bold text-dark font-fifty">Our <span class="text-orange">Plants</span></h3>
                 <p class="plant-description font-regular font-small-l text-light-dark">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
 
             </div>
 
-            <div class="plant-card-container">
+            <div class="plant-card-container b">
                 <div class="plant-card">
-                    <img src="assets/sample-flower-image.png" alt="">
+                    <img  src="assets/sample-flower-image.png" alt="">
                     <h5 class="plant-name">Lily blosom</h5>
                     <h5 class="plant-price"> 20 USA</h5>
                     <button class="btn-primary">ADD TO CART</button>
