--- a/index.html
+++ b/index.html
@@ -100,6 +100,22 @@
 
             </div>
         </section>
+
+        <section class="plant-lover flex b">
+            <div class="img-container">
+                <img class="flower-store b" src="assets/flower-store.png" alt="">
+
+                <img class="trusted-badge mobile b" src="assets/trusted-badge.png" alt="">
+            </div>
+            <div class="plant-lover-text  b">
+                <h2 class="lover-heading noto-serif-font font-bold text-dark font-fifty">Flower & Plants Lover</h2>
+                <ul class="love-list">
+                    <li class="  font-regular font-small-l text-light-dark">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                    <li class="font-regular font-small-l text-light-dark">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                    <li class="font-regular font-small-l text-light-dark">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                </ul>
+            </div>
+        </section>
       </main>
 
       
