added the footer section

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         </section>
 
         <section class="join b">
-            
+
             <div class="container">
                 <h3 class="join-heading noto-serif-font font-bold font-fifty">Join the colorful Bunch</h3>
                 <div class="input">
@@ -195,8 +195,35 @@
 
     </main>
 
-    <footer>
+    <footer class="b">
+        <section class="footer-container b ">
+            <div class="footer-head  b">
+                <img class="footer-logo" src="assets/logo.png" alt="">
+                <p class="footer-descript">Indulge your senses with the beauty and fragrance of our fresh flower shop.
+                </p>
+            </div>
+            <div class="link-footer b">
+                <li><a href="">Home</a></li>
+                <li><a href="">About Us</a></li>
+                <li><a href="">Blog</a></li>
+                <li><a href="">FAQ</a></li>
+                <li><a href="">Contact Us</a></li>
+                <li><a href=""> Features</a></li>
+                <li><a href="">Pricing</a></li>
+                <li><a href="">Privacy Policy</a></li>
+                <li><a href="">Terms of Service</a></li>
+                <li><a href="">Help Center</a></li>
+            </div>
+            <div class="media b">
+                <ul class="social-media-link">
+                    <a href=""><img src="assets/icon-linkedin.png" alt=""></a>
+                    <a href=""><img src="assets/icon-twitter.png" alt=""></a>
+                    <a href=""><img src="assets/icon-facebook.png" alt=""></a>
+                    <a href=""><img src="assets/icon-youtube.png" alt=""></a>
 
+                </ul>
+            </div>
+        </section>
     </footer>
 
 
