added the full version

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div id="header-top" class=" top flex b">
             <img class="logo" src="assets/logo.png" alt="logo of the website">
             <nav class="">
-                <ul class="list-none flex nav-gap  ">
+                <ul class="list-none flex nav-gap b ">
                     <li class="font-bold text-dark font-small mobile">Home</li>
                     <li class="font-regular text-gray-two font-small mobile">Shop</li>
                     <li class=" font-regular text-gray-two font-small mobile">About us</li>
@@ -31,15 +31,15 @@
 
 
         <div class="banner flex end b">
-            <div class="banner-content">
-                <h1 class="noto-serif-font font-bold text-dark font-large  mb-13  b">ALWAYS <span class="text-orange">
+            <div class="banner-content b">
+                <h1 class="noto-serif-font font-bold text-dark font-large  mb-13 b ">ALWAYS <span class="text-orange">
                         FRESH <br> FLOWER</span></h1>
                 <p class=" text-light-dark font-small-l font-regular    ">Indulge your senses with the beauty and
                     fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of
                     fresh flowers that are perfect for any occasion. </p>
 
             </div>
-            <img class="hero-flower flex end b" src="assets/hero-flower.png" alt="">
+            <img class="hero-flower flex end " src="assets/hero-flower.png" alt="">
         </div>
 
 
@@ -216,10 +216,10 @@
             </div>
             <div class="media b">
                 <ul class="social-media-link">
-                    <a href=""><img src="assets/icon-linkedin.png" alt=""></a>
-                    <a href=""><img src="assets/icon-twitter.png" alt=""></a>
-                    <a href=""><img src="assets/icon-facebook.png" alt=""></a>
-                    <a href=""><img src="assets/icon-youtube.png" alt=""></a>
+                    <li><a href=""><img src="assets/icon-linkedin.png" alt=""></a></li>
+                   <li> <a href=""><img src="assets/icon-twitter.png" alt=""></a></li>
+                   <li> <a href=""><img src="assets/icon-facebook.png" alt=""></a></li>
+                    <li> <a href=""><img src="assets/icon-youtube.png" alt=""></a></li>
 
                 </ul>
             </div>
